<resources>
    <string name="app_name">My-Books-App</string>
    <string name="book_title">Judul Buku: %s</string>
    <string name="author_name">Nama Penulis: %s</string>
    <string name="publication_year">Tahun Terbit: %s</string>
    <string name="category">Kategory: %s</string>
    <string name="image_logo">image logo</string>
    <string name="main_title">List Buku Favorit</string>
    <string name="about">About</string>
    <string name="name">Nanda Arya Putra</string>
    <string name="email">nandaarya404@gmail.com</string>
    <string name="profile_image">profile image</string>
    <string name="share">Share</string>
</resources>